--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "serve": "http-server dist -p 8888"
+    "serve": "npm run build && http-server dist -p 8888"
   },
   "dependencies": {
     "vue": "^2.5.2",
