--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
+dist/static
 # TypeScript v1 declaration files
 typings/
 
@@ -74,3 +74,7 @@ typings/
 
 # FuseBox cache
 .fusebox/
+*.map
+dist/static/js/vendor.ee9d02ca86e49e27a944.js
+dist/service-worker.js
+dist/index.html
